fix: correct z-index value for editor component to maintain layout consistency

--- a/src/styles/css-variables/_z-index.scss
+++ b/src/styles/css-variables/_z-index.scss
@@ -1,7 +1,7 @@
 :root {
 	--z-background: -1;
 	--z-raised: 1;
-	--z-editor: 15;
+	--z-editor: 10;
 	--z-header: 20;
 	--z-dropdown: 30;
 	--z-sticky: 40;
